--- a/ecommerce-customer/frontend/package.json
+++ b/ecommerce-customer/frontend/package.json
@@ -3,16 +3,17 @@
   "version": "1.0.0",
   "description": "E-commerce Customer Frontend",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-brands-svg-icons": "^7.0.1",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.6",
+    "autoprefixer": "^10.4.15",
+    "axios": "^1.5.0",
+    "postcss": "^8.4.29",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
-    "axios": "^1.5.0",
-    "@fortawesome/react-fontawesome": "^0.2.0",
-    "@fortawesome/free-solid-svg-icons": "^6.4.2",
-    "@fortawesome/fontawesome-svg-core": "^6.4.2",
-    "tailwindcss": "^3.3.0",
-    "autoprefixer": "^10.4.15",
-    "postcss": "^8.4.29"
+    "tailwindcss": "^3.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
