--- a/ecommerce-owner/frontend/package.json
+++ b/ecommerce-owner/frontend/package.json
@@ -3,16 +3,17 @@
   "version": "1.0.0",
   "description": "E-commerce Owner Frontend",
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.15.0",
-    "axios": "^1.5.0",
-    "react-chartjs-2": "^5.2.0",
-    "chart.js": "^4.4.0",
-    "react-select": "^5.7.4",
-    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
-    "@fortawesome/fontawesome-svg-core": "^6.4.2"
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "axios": "^1.5.0",
+    "chart.js": "^4.4.0",
+    "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^6.15.0",
+    "react-select": "^5.7.4"
   },
   "scripts": {
     "start": "react-scripts start",
