--- a/ecommerce-customer/backend/package.json
+++ b/ecommerce-customer/backend/package.json
@@ -8,14 +8,16 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^7.5.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "jsonwebtoken": "^9.0.2",
+    "@aws-sdk/client-s3": "^3.901.0",
     "bcryptjs": "^2.4.3",
-    "razorpay": "^2.9.2",
-    "crypto": "^1.0.1"
+    "cors": "^2.8.5",
+    "crypto": "^1.0.1",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.5.0",
+    "multer": "^2.0.2",
+    "razorpay": "^2.9.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
